--- a/src/less/styles.less
+++ b/src/less/styles.less
@@ -69,7 +69,21 @@
   background-color: @today-highlight-bg;
 }
 
+.react-datepicker-popper {
+  z-index: 100 !important;
+}
 
+.DatePicker__month .react-datepicker__month:hover {
+  background-color: #f0f0f0 !important;
+}
+.DatePicker__week .react-datepicker__week:hover {
+  background-color: #f0f0f0 !important;
+}
+
+.DatePicker .react-datepicker__day:hover {
+  border-radius: 0.3rem;
+  background-color: #d5d5d5;
+}
 @import './toolbar.less';
 @import './event.less';
 @import './month.less';
