Change to less file.

--- a/lib/less/styles.less
+++ b/lib/less/styles.less
@@ -68,7 +68,7 @@
 .rbc-today {
   background-color: @today-highlight-bg;
 }
-@import './react-datepicker.css';
+@import './react-datepicker.less';
 
 .react-datepicker-popper {
   z-index: 100 !important;
